Third Commit
- Added Github Actions
- Added method comments
- Removed description from order and add orderNumber
- Added junit test cases
- Updated npm script to generate more test data
- added test profile to gradle script
- Added a Dockerfile